[tool.poetry]
name = "repl_python3_duke-bot-source-code"
version = "0.1.0"
description = ""
authors = ["JosiahWI <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
